--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                             </div>
                         </div>
                         <p class="profile-description">
-                            みなさん、今日は来ていただきありがとうございます！
+                            みなさん来ていただきありがとうございます！
                             休日はカフェ巡りやお出かけを楽しんでいます
+                            今日はみなさんと楽しい時間を過ごせたら嬉しいです！
+                            どうぞよろしくお願いします！
                         </p>
                         <div class="favorites">
                         </div>
