--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                         <p class="profile-description">
                             今日は来ていただきありがとうございます！
-                            休日は野球や旅行を楽しんでいます
+                            休日は野球や旅行を楽しんでいます⚾
                             皆さんと素敵な思い出を作れることを楽しみにしています！
                         </p>
                         <div class="favorites">
@@ -109,7 +109,7 @@
                         </div>
                         <p class="profile-description">
                             みなさん来ていただきありがとうございます！
-                            休日はカフェ巡りやお出かけを楽しんでいます
+                            休日はカフェ巡りやお出かけを楽しんでいます💖
                             今日はみなさんと楽しい時間を過ごせたら嬉しいです！
                             どうぞよろしくお願いします！
                         </p>
