--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <p class="profile-description">
                             みなさん来ていただきありがとうございます！
-                            休日はカフェ巡りやお出かけを楽しんでいます💖
+                            休日はカフェ巡りやお出かけを楽しんでいます😊
                             今日はみなさんと楽しい時間を過ごせたら嬉しいです！
                             どうぞよろしくお願いします！
                         </p>
